# osmsplits2

./: .gitmodules  CMakeLists.txt
src/: main.cpp  s2splitter.cpp  s2splitter.h
